--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/IchBInHanz/mmdl#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "i": "^0.3.7",
+    "npm": "^8.19.2",
+    "puppeteer": "^18.0.5",
     "socket.io": "^4.5.2"
   }
 }
