--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i": "^0.3.7",
     "npm": "^8.19.2",
     "puppeteer": "^18.0.5",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "torrent-search-api": "^2.1.4"
   }
 }
